--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -1,3 +1,21 @@
 .width_50 {
       width: 50%;
 }
+
+.center {
+      justify-content: center;
+      text-align: center;
+}
+
+.between {
+      justify-content: space-between;
+}
+
+.gap4 {
+      gap: 4rem;
+}
+
+.margin_block_0 {
+      margin-block-start: 0;
+      margin-block-end: 0;
+}
