added role choose page

--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -19,3 +19,10 @@
       margin-block-start: 0;
       margin-block-end: 0;
 }
+
+.page {
+      max-width: 1200px;
+      margin: 0 auto;
+      box-sizing: border-box;
+      padding: 1rem;
+}
