--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .container {
       width: 100vw;
-      height: 3.5rem;
+      height: 5rem;
       background-color: var(--element-bg-contrast);
       border-bottom: 1px solid var(--element-bg-2);
       box-sizing: border-box;
@@ -14,6 +14,7 @@
             display: flex;
             justify-content: space-between;
             color: var(--text-contrast-color);
+            align-items: center;
 
             & nav {
                   display: flex;
@@ -24,6 +25,13 @@
             & .logo {
                   font-weight: 600;
                   font-style: italic;
+                  display: flex;
+                  gap: 0.5rem;
+                  align-items: center;
+
+                  & img {
+                        height: 3rem;
+                  }
             }
       }
 }
