--- a/frontend/src/components/ui/Tile/tile.module.scss
+++ b/frontend/src/components/ui/Tile/tile.module.scss
@@ -7,7 +7,8 @@
       padding: 1rem;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      //align-items: center;
+      margin-bottom: 1rem;
 
       & img {
             aspect-ratio: 1/1.3;
