--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -1,10 +1,27 @@
 .width_50 {
       width: 50%;
 }
+.width_30 {
+      width: 30%;
+}
+.width_60 {
+      width: 60%;
+}
+
+.flex_grow_2 {
+      flex-grow: 2;
+}
 
 .center {
       justify-content: center;
       text-align: center;
+      align-items: center;
+}
+
+.start {
+      justify-content: start;
+      text-align: start;
+
 }
 
 .between {
@@ -20,9 +37,20 @@
       margin-block-end: 0;
 }
 
+.margin_block_02 {
+      margin-block-start: 0.2rem;
+      margin-block-end: 0.2rem;
+}
+
 .page {
       max-width: 1200px;
       margin: 0 auto;
       box-sizing: border-box;
       padding: 1rem;
+}
+
+.big_avatar {
+      width: 8rem;
+      height: 8rem;
+      border-radius: 50%;
 }
