--- a/frontend/src/components/ui/Button/button.module.scss
+++ b/frontend/src/components/ui/Button/button.module.scss
@@ -14,6 +14,10 @@
   align-items: center;
   gap: 0.5rem;
 
+  &.short {
+    width: fit-content;
+  }
+
   &.primary {
     background-color: var(--primary-color);
     color: var(--text-contrast-color);
