--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -5,6 +5,16 @@
       border-bottom: 2px solid var(--divider-color);
       box-sizing: border-box;
       padding: 1rem;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+      transform: translateY(-100%);
+      pointer-events: none;
+
+      &.visible {
+            pointer-events: all;
+            opacity: 1;
+            transform: translateY(0);
+      }
       
 
       .inner {
