--- a/frontend/src/pages/Profile/Education/education.module.scss
+++ b/frontend/src/pages/Profile/Education/education.module.scss
@@ -6,9 +6,26 @@
   & .row {
     border-bottom: 1px solid var(--divider-color);
     padding: 0 0 0.2rem 0;
+    position: relative;
 
     &:last-child {
       border-bottom: 1px solid transparent;
     }
+  }
+}
+
+.edit_btn {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: absolute;
+  right: 0.2rem;
+  top: 0.8rem;
+
+
+  & svg {
+    width: 22px;
+    height: 22px;
   }
 }
