added students forms

--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -55,10 +55,13 @@
 .padding_1000 {
       padding: 1rem 0 0 0!important;
 }
+.padding_5050 {
+      padding: 5rem 0 5rem 0!important;
+}
 
 .with_icon {
       display: flex;
-      gap: 1rem;
+      gap: 0.2rem;
       align-items: center;
 
       & svg {
@@ -71,6 +74,14 @@
       display: flex;
 }
 
+.marginTop {
+      margin: 4rem auto;
+}
+
+.secondary {
+      color: var(--text-2-color);
+}
+
 .big_avatar {
       width: 50%;
       aspect-ratio: 1/1 !important;
@@ -78,6 +89,14 @@
       border-radius: 50%;
       border: 1px solid var(--divider-color);
       box-shadow: 0 0 0 1px var(--element-bg-2);
+}
+
+.flex_grow_0 {
+      flex-grow: 0 !important;
+}
+
+.bold_text {
+      font-weight: bold;
 }
 
 @media screen and (max-width: 800px){
@@ -89,7 +108,8 @@
             width: 100%;
       }
       .width_30 {
-            width: 100%;
+            width: 100% !important;
+            max-width: 100% !important;
       }
       .width_60 {
             width: 100%;
