--- a/frontend/src/styles/global.module.scss
+++ b/frontend/src/styles/global.module.scss
@@ -53,10 +53,20 @@
       padding: 0!important;
 }
 .padding_1000 {
-      padding: 1rem 0 0 0!important;
+      padding: 1rem 0 0 0 !important;
+}
+.padding_2000 {
+      padding: 2rem 0 0 0 !important;
+}
+.padding_3101 {
+      padding: 3rem 1rem 0 1rem !important;
 }
 .padding_5050 {
-      padding: 5rem 0 5rem 0!important;
+      padding: 5rem 0 5rem 0 !important;
+}
+
+.text_decor_none {
+      text-decoration: none;
 }
 
 .with_icon {
