--- a/frontend/src/pages/Profile/Sidebar/sidebar.module.scss
+++ b/frontend/src/pages/Profile/Sidebar/sidebar.module.scss
@@ -1,5 +1,10 @@
 .aside {
-  margin-top: 7.6rem;
+  margin-top: 8.1rem;
   max-width: 300px;
   //flex-grow: 1;
+}
+
+.text_container {
+  text-align: start;
+  width: 100%;
 }
