--- a/frontend/src/components/Forms/InfoBlock/info-block.module.scss
+++ b/frontend/src/components/Forms/InfoBlock/info-block.module.scss
@@ -4,9 +4,42 @@
   text-align: justify;
 }
 
-.img_container {
+.container {
+  box-sizing: border-box;
+  padding: 1rem 3rem 1rem 3rem;
+  width: 100%;
+  background: var(--element-bg);
+  border-radius: 36px;
+  text-align: start;
 
+  & hr {
+    color: var(--divider-color);
+    width: 100%;
+  }
+
+  & .arrow {
+    border-radius: 12px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.4rem;
+    cursor: pointer;
+    flex-grow: 0;
+    background-color: var(--element-bg);
+    color: var(--text-color);
+    border: 2px solid var(--element-bg-2);
+    & path {
+      stroke: var(--text-color);
+    }
+  }
+}
+
+.img_container {
+  display: flex;
+  justify-content: center;
   & img {
-    width: 48%;
+    width: 25%;
   }
 }
