--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -2,7 +2,8 @@
       position: fixed;
       width: 100vw;
       height: 4.6rem;
-      background-color: var(--element-bg);
+      background: var(--element-bg-semi-transparent);
+      backdrop-filter: blur(6px);
       border-bottom: 2px solid var(--divider-color);
       box-sizing: border-box;
       padding: 1rem;
@@ -10,6 +11,7 @@
       transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
       transform: translateY(-100%);
       pointer-events: none;
+      z-index: 100;
 
       &.visible {
             pointer-events: all;
@@ -21,6 +23,7 @@
       .inner {
             font-size: 1rem;
             max-width: 1160px;
+            width: 80%;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -45,6 +48,7 @@
                   gap: 0.5rem;
                   align-items: center;
                   position: relative;
+                  cursor: pointer;
 
                   & svg {
                         width: 24px;
@@ -59,10 +63,23 @@
                   gap: 0.5rem;
                   align-items: center;
 
-                  & img {
+                  & svg {
                         height: 2.5rem;
                   }
             }
+      }
+}
+
+@media screen and (max-width: 920px) {
+      .logo span {
+            display: none;
+      }
+      .desktop a {
+            font-size: 0 !important;
+            gap: 0 !important;
+      }
+      .container .inner {
+            width: 100%;
       }
 }
 
