--- a/frontend/src/components/StudentCard/student-card.module.scss
+++ b/frontend/src/components/StudentCard/student-card.module.scss
@@ -4,6 +4,10 @@
   grid-template-columns: 1fr 3fr 1fr 3fr 1fr;
   flex-grow: 0;
 
+  &.offer {
+    align-items: center;
+  }
+
   & div {
     height: fit-content;
     user-select: none;
@@ -22,7 +26,9 @@
     object-fit: cover;
   }
 
-
+  .right_container {
+    display: contents !important;
+  }
 }
 
 .with_hover {
@@ -31,4 +37,25 @@
   &:hover {
     box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.1);
   }
+}
+
+@media screen and (max-width: 920px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 0.5rem;
+
+    &.offer {
+      align-items: start;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+
+  //.right_container {
+  //  display: flex;
+  //  gap: 0.5rem;
+  //}
 }
