--- a/frontend/src/components/ui/TabBar/tab-bar.module.scss
+++ b/frontend/src/components/ui/TabBar/tab-bar.module.scss
@@ -6,25 +6,28 @@ $medium: 1200px;
   width: 100%;
   margin: 0 auto;
   display: flex;
-  overflow: hidden;
+  gap: 8px;
+  overflow-x: auto;
+  flex-wrap: wrap;
   user-select: none;
 
   & .tab {
     flex-grow: 1;
     text-align: center;
-    padding: 0.5em;
+    padding: 12px 16px 12px 16px;
     user-select: none;
     transition: all 0.2s ease-in-out;
-    color: var(--text-color);
+    color: var(--text-2-color);
+    background: var(--gray-color-5);
     cursor: pointer;
     border-bottom: 3px solid transparent;
     margin-bottom: 1rem;
+    border-radius: 12px;
+    font-weight: 500;
 
     &.selected {
-      //background: var(--element-bg-2);
-      border-radius: 0.9em 0.9em 0 0;
-      border-bottom: 3px solid var(--primary-color);
-
+      color: var(--text-link-color);
+      background: var(--gray-color-5);
     }
 
     @media screen and (max-width: 520px) {
