--- a/frontend/src/components/ui/Typography/typography.module.scss
+++ b/frontend/src/components/ui/Typography/typography.module.scss
@@ -5,4 +5,26 @@
 
 .main {
   color: var(--text-color);
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+
+  &.center {
+    justify-content: center;
+    align-self: center;
+  }
+  &.align_end {
+    align-items: end;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .main {
+    margin-block-start: 0.5rem;
+    margin-block-end: 0.5rem;
+  }
+
+  h1.main {
+    font-size: 24px;
+  }
 }
