--- a/frontend/src/pages/Profile/Portfolio/portfolio.module.scss
+++ b/frontend/src/pages/Profile/Portfolio/portfolio.module.scss
@@ -1,3 +1,14 @@
 .main_tile {
   padding: 0;
 }
+
+.card {
+  border-radius: 1rem;
+  border: 1px solid var(--divider-color);
+  padding: 0.8rem;
+
+  & p {
+    margin-block-start: 0;
+    margin-block-end: 0.5rem;
+  }
+}
