--- a/frontend/src/components/ui/Tile/tile.module.scss
+++ b/frontend/src/components/ui/Tile/tile.module.scss
@@ -1,4 +1,4 @@
-.container {
+.tile {
       background-color: var(--element-bg);
       //border: 1px solid var(--element-bg-2);
       color: var(--text-color);
